[card-content] Set card content bottom position variant margin 0, preventing overflow of footer element

--- a/src/CardContent/CardContent.module.css
+++ b/src/CardContent/CardContent.module.css
@@ -29,7 +29,7 @@
   flex-direction: column;
 }
 .bottom {
-  margin-top: 1em;
+  margin: 0;
 }
 
 /* Fill variant */
